(REMOVE) - unused convertToDTO in BookmarkController.java
(REPLACE)
*in BookmarkService
- .collect(Collectors.toList());
+ .toList();